; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/rcar-vin/extr_rcar-v4l2.c_rvin_dv_timings_cap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/rcar-vin/extr_rcar-v4l2.c_rvin_dv_timings_cap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_dv_timings_cap = type { i32 }
%struct.rvin_dev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.v4l2_subdev = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@pad = common dso_local global i32 0, align 4
@dv_timings_cap = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_dv_timings_cap*)* @rvin_dv_timings_cap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rvin_dv_timings_cap(%struct.file* %0, i8* %1, %struct.v4l2_dv_timings_cap* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_dv_timings_cap*, align 8
  %8 = alloca %struct.rvin_dev*, align 8
  %9 = alloca %struct.v4l2_subdev*, align 8
  %10 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_dv_timings_cap* %2, %struct.v4l2_dv_timings_cap** %7, align 8
  %11 = load %struct.file*, %struct.file** %5, align 8
  %12 = call %struct.rvin_dev* @video_drvdata(%struct.file* %11)
  store %struct.rvin_dev* %12, %struct.rvin_dev** %8, align 8
  %13 = load %struct.rvin_dev*, %struct.rvin_dev** %8, align 8
  %14 = call %struct.v4l2_subdev* @vin_to_source(%struct.rvin_dev* %13)
  store %struct.v4l2_subdev* %14, %struct.v4l2_subdev** %9, align 8
  %15 = load %struct.v4l2_dv_timings_cap*, %struct.v4l2_dv_timings_cap** %7, align 8
  %16 = getelementptr inbounds %struct.v4l2_dv_timings_cap, %struct.v4l2_dv_timings_cap* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %4, align 4
  br label %38

22:                                               ; preds = %3
  %23 = load %struct.rvin_dev*, %struct.rvin_dev** %8, align 8
  %24 = getelementptr inbounds %struct.rvin_dev, %struct.rvin_dev* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.v4l2_dv_timings_cap*, %struct.v4l2_dv_timings_cap** %7, align 8
  %29 = getelementptr inbounds %struct.v4l2_dv_timings_cap, %struct.v4l2_dv_timings_cap* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  %30 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %9, align 8
  %31 = load i32, i32* @pad, align 4
  %32 = load i32, i32* @dv_timings_cap, align 4
  %33 = load %struct.v4l2_dv_timings_cap*, %struct.v4l2_dv_timings_cap** %7, align 8
  %34 = call i32 @v4l2_subdev_call(%struct.v4l2_subdev* %30, i32 %31, i32 %32, %struct.v4l2_dv_timings_cap* %33)
  store i32 %34, i32* %10, align 4
  %35 = load %struct.v4l2_dv_timings_cap*, %struct.v4l2_dv_timings_cap** %7, align 8
  %36 = getelementptr inbounds %struct.v4l2_dv_timings_cap, %struct.v4l2_dv_timings_cap* %35, i32 0, i32 0
  store i32 0, i32* %36, align 4
  %37 = load i32, i32* %10, align 4
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %22, %19
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local %struct.rvin_dev* @video_drvdata(%struct.file*) #1

declare dso_local %struct.v4l2_subdev* @vin_to_source(%struct.rvin_dev*) #1

declare dso_local i32 @v4l2_subdev_call(%struct.v4l2_subdev*, i32, i32, %struct.v4l2_dv_timings_cap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
